@@ -2,6 +2,7 @@ Next Release
 ============
 
 * ENH: New ANTs interface: ApplyTransformsToPoints
+* ENH: New FreeSurfer workflow: create_skullstripped_recon_flow()
 * FIX: MRTrix tracking algorithms were ignoring mask parameters.
 
 Release 0.9.2 (January 31, 2014)
